fix: fixed alignment in the center of the screen

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 .central{
   position: relative;
-  border: 1px solid black;
   width: 1024px;
   height: auto;
+  margin: 0px auto;
 }
 
 .info-container {
